Modify app URL.

--- a/slide/index.html
+++ b/slide/index.html
@@ -173,7 +173,7 @@ names(wine)
     <h2>Try the Demo</h2>
   </hgroup>
   <article data-timings="">
-    <p><a href="http://kharakawa.shinyapps.io/shinyapp/">http://kharakawa.shinyapps.io/shinyapp/</a></p>
+    <p><a href="http://kharakawa.shinyapps.io/devdataprod-cp/">http://kharakawa.shinyapps.io/devdataprod-cp/</a></p>
 
 <ul>
 <li>This shiny application demonstrates three clasiffication models on the wine dataset</li>
@@ -187,7 +187,7 @@ names(wine)
 
 <ul>
 <li>Two scatter plots, one is the actual wine types, the other is the predicted types</li>
-<li>Model&#39;s miss classification rate of training data themselves</li>
+<li>Model&#39;s miss classification rate of training data</li>
 </ul></li>
 </ul>
 
