--- a/slide/index.html
+++ b/slide/index.html
@@ -176,7 +176,7 @@ names(wine)
     <p><a href="http://kharakawa.shinyapps.io/devdataprod-cp/">http://kharakawa.shinyapps.io/devdataprod-cp/</a></p>
 
 <ul>
-<li>This shiny application demonstrates three clasiffication models on the wine dataset</li>
+<li>This shiny application demonstrates three classification models on the wine dataset</li>
 <li>You can select:
 
 <ul>
